--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--==================== HEADER ====================-->
 <header class="header" id="header">
     <nav class="nav container">
-        <a href="#" class="nav__logo">Fadhila</a>
+        <a href="#" class="nav__logo">Kiprotich</a>
 
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list grid">
